--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,78 @@
+:root {
+	--background-color: hsl(0, 0%, 100%);
+	--background-light: hsl(0, 0%, 85%);
+	--text-dark: hsl(0, 0%, 3%);
+	--text-muted: hsl(0, 0%, 66%);
+	--text-white: hsl(0, 0%, 97%);
+	--black: hsl(0, 0%, 0%);
+	--white: hsl(0, 0%, 100%);
+	--gray: hsl(0, 0%, 50%);
+	--light: hsl(0, 0%, 80%);
+	--primary: hsl(210, 75%, 50%);
+	--secondary: hsl(30, 75%, 50%);
+	--success: hsl(120, 60%, 40%);
+	--warning: hsl(60, 60%, 40%);
+	--danger: hsl(0, 75%, 50%);
+	--primary-drk: hsl(210, 75%, 40%);
+	--secondary-drk: hsl(39, 75%, 40%);
+	--success-drk: hsl(120, 75%, 40%);
+	--warning-drk: hsl(60, 75%, 40%);
+	--danger-drk: hsl(0, 75%, 40%);
+	--primary-lt: hsl(210, 75%, 80%);
+	--secondary-lt: hsl(39, 75%, 80%);
+	--success-lt: hsl(120, 75%, 80%);
+	--warning-lt: hsl(60, 75%, 80%);
+	--danger-lt: hsl(0, 75%, 80%);
+}
+
+[data-theme='dark'] {
+	--background-color: hsl(240, 15%, 18%);
+	--background-light: hsl(240, 15%, 15%);
+	--text-dark: hsl(0, 0%, 100%);
+	--text-muted: hsl(0, 0%, 52%);
+	--text-white: hsl(0, 0%, 3%);
+	--gray: hsl(0, 0%, 50%);
+	--light: hsl(0, 0%, 20%);
+	--primary-drk: hsl(210, 75%, 60%);
+	--secondary-drk: hsl(39, 75%, 60%);
+	--success-drk: hsl(120, 75%, 56%);
+	--warning-drk: hsl(60, 75%, 56%);
+	--danger-drk: hsl(0, 75%, 60%);
+	--primary-lt: hsl(210, 50%, 20%);
+	--secondary-lt: hsl(39, 50%, 20%);
+	--success-lt: hsl(120, 50%, 20%);
+	--warning-lt: hsl(60, 50%, 20%);
+	--danger-lt: hsl(0, 50%, 20%);
+}
+
 html {
 	font-size: 16px;
+}
+
+html[data-size='sm'] {
+	font-size: 14px;
+}
+
+html[data-size='lg'] {
+	font-size: 18px;
+}
+
+html[data-size='xl'] {
+	font-size: 20px;
 }
 
 body {
 	font-family: 'Roboto', Helvetica, sans-serif;
 	box-sizing: border-box;
 	margin: 0;
+	background-color: var(--background-color);
+	color: var(--text-dark);
+	transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
+}
+
+p {
+	margin: 0;
+	text-align: left;
 }
 
 .btn {
@@ -17,6 +84,19 @@ body {
 	text-transform: inherit;
 	color: inherit;
 	font-size: inherit;
+	transition: color ease-in-out 0.15s, background-color ease-in-out 0.15s;
+}
+
+select {
+	font-size: 0.875rem;
+}
+
+.cursor-auto {
+	cursor: auto;
+}
+
+.cursor-pointer {
+	cursor: pointer;
 }
 
 .wrapper {
@@ -33,7 +113,8 @@ body {
 	justify-content: center;
 	align-items: center;
 	gap: 32px;
-	font-size: 18px;
+	font-size: 1.2rem;
+	letter-spacing: 1.5px;
 }
 
 .w-auto {
@@ -44,6 +125,10 @@ body {
 	width: 100%;
 }
 
+.min-w-100px {
+	min-width: 100px;
+}
+
 li {
 	list-style: none;
 }
@@ -51,6 +136,7 @@ li {
 table {
 	border-spacing: 0;
 	table-layout: fixed;
+	width: 100%;
 }
 
 th,
@@ -59,12 +145,18 @@ td {
 }
 
 tr td {
-	border-bottom: 1px solid lightgray;
+	border-bottom: 1px solid var(--light);
+}
+
+td.ellipsis {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 tbody tr:hover {
-	box-shadow: 0 0 10px #cbe6ec;
-	background-color: #eff7fa;
+	box-shadow: 0 0 10px var(--primary-lt);
+	background-color: var(--primary-lt);
 }
 
 .table-col-0 {
@@ -74,6 +166,11 @@ tbody tr:hover {
 
 .table-col-1 {
 	width: 80px;
+	white-space: nowrap;
+}
+
+.table-col-2 {
+	width: 100px;
 	white-space: nowrap;
 }
 
@@ -87,22 +184,42 @@ tbody tr:hover {
 	white-space: nowrap;
 }
 
+.l-spacing-0 {
+	letter-spacing: 0;
+}
+
+.l-spacing-sm {
+	letter-spacing: 0.5px;
+}
+
+.l-spacing-md {
+	letter-spacing: 1px;
+}
+
+.l-spacing-lg {
+	letter-spacing: 1.5px;
+}
+
 a {
 	text-decoration: none;
 	font-weight: 600;
-	color: black;
+	color: var(--text-dark);
 }
 
 a:visited {
-	color: black;
+	color: var(--text-dark);
 }
 
 a.active {
-	color: dodgerblue;
+	color: var(--primary);
+}
+
+a:hover {
+	color: var(--primary-drk);
 }
 
 .border-bottom {
-	border-bottom: 1px solid lightgray;
+	border-bottom: 1px solid var(--light);
 }
 
 .text-nowrap {
@@ -110,15 +227,23 @@ a.active {
 }
 
 .text-muted {
-	color: rgb(141, 141, 141);
+	color: var(--text-muted);
 }
 
 .text-start {
 	text-align: left;
 }
 
+.text-end {
+	text-align: right;
+}
+
 .text-uppercase {
 	text-transform: uppercase;
+}
+
+.text-underline {
+	text-decoration: underline;
 }
 
 .text-semibold {
@@ -132,23 +257,36 @@ a.active {
 .text-warning,
 .text-hover-warning:hover,
 .text-active-warning:active {
-	color: rgb(223, 219, 13);
+	color: var(--warning);
 }
 
 .text-primary {
-	color: dodgerblue;
+	color: var(--primary);
 }
 
 .text-success {
-	color: green;
+	color: var(--success);
 }
 
 .text-danger {
-	color: firebrick;
+	color: var(--danger);
 }
 
-.flex {
+.text-white {
+	color: var(--text-white);
+}
+
+.badge {
+	padding: 0.25rem 0.5rem;
+	border-radius: 0.25rem;
+}
+
+.d-flex {
 	display: flex;
+}
+
+.flex-1 {
+	flex: 1;
 }
 
 .flex-center {
@@ -172,28 +310,81 @@ a.active {
 	align-items: start;
 }
 
+.flex-row {
+	flex-direction: row;
+}
+
 .column {
 	flex-direction: column;
 }
 
-.btlink {
+.btn-link {
 	padding: 0;
 }
 
+.btn-link:hover,
+.btn-link.active {
+	color: var(--primary);
+}
+
 .btn-primary {
-	background-color: lightblue;
+	background-color: var(--primary);
+	color: var(--white);
+}
+
+.btn-primary:hover:not(:disabled) {
+	background-color: var(--primary-drk);
 }
 
 .btn-secondary {
-	background-color: lightgray;
+	background-color: var(--secondary);
+}
+
+.btn-secondary:hover:not(:disabled) {
+	background-color: var(--secondary-drk);
 }
 
 .btn-danger {
-	background-color: lightcoral;
+	background-color: var(--danger);
+	color: var(--white);
+}
+
+.btn-danger:hover:not(:disabled) {
+	background-color: var(--danger-drk);
 }
 
 .btn-success {
-	background-color: lightgreen;
+	background-color: var(--success);
+	color: var(--white);
+}
+
+.btn-success:hover:not(:disabled) {
+	background-color: var(--success-drk);
+}
+
+.btn-warning {
+	background-color: var(--warning);
+	color: var(--white);
+}
+
+.btn-warning:hover:not(:disabled) {
+	background-color: var(--warning-drk);
+}
+
+.btn-light-primary {
+	background-color: var(--primary-lt);
+}
+
+.btn-light-secondary {
+	background-color: var(--light);
+}
+
+.btn-light-danger {
+	background-color: var(--danger-lt);
+}
+
+.btn-light-success {
+	background-color: var(--success-lt);
 }
 
 .rounded-1 {
@@ -260,34 +451,124 @@ a.active {
 	padding: 1rem;
 }
 
-.g-1 {
+.m-0 {
+	margin: 0;
+}
+
+.m-1 {
+	margin: 0.25rem;
+}
+
+.m-2 {
+	margin: 0.5rem;
+}
+
+.m-3 {
+	margin: 0.75rem;
+}
+
+.m-4 {
+	margin: 1rem;
+}
+
+.mx-0 {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.mx-1 {
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
+}
+
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
+}
+
+.mx-3 {
+	margin-left: 0.75rem;
+	margin-right: 0.75rem;
+}
+
+.mx-4 {
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
+.my-0 {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
+}
+
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+
+.my-3 {
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}
+
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+.mb-0 {
+	margin-bottom: 0;
+}
+
+.mb-1 {
+	margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
+
+.mb-4 {
+	margin-bottom: 1rem;
+}
+
+.gap-1 {
 	gap: 0.25rem;
 }
-.g-2 {
+.gap-2 {
 	gap: 0.5rem;
 }
-.g-3 {
+.gap-3 {
 	gap: 0.75rem;
 }
-.g-4 {
+.gap-4 {
 	gap: 1rem;
 }
-.g-5 {
+.gap-5 {
 	gap: 1.25rem;
 }
-.g-6 {
+.gap-6 {
 	gap: 1.5rem;
 }
-.g-7 {
+.gap-7 {
 	gap: 1.75rem;
 }
-.g-8 {
+.gap-8 {
 	gap: 2rem;
 }
-.g-9 {
+.gap-9 {
 	gap: 2.5rem;
 }
-.g-10 {
+.gap-10 {
 	gap: 3rem;
 }
 
@@ -302,22 +583,22 @@ a.active {
 	top: 2.2rem;
 	right: 0;
 	border-radius: 0.75rem;
-	border: 1px solid lightgray;
-	background-color: white;
+	border: 1px solid var(light);
+	background-color: var(--background-color);
 	z-index: 70;
 	overflow: hidden;
 }
 
 .dropdown-label {
-	color: gray;
+	color: var(--gray);
 	padding: 0.5rem 1rem;
-	border-bottom: 1px solid lightgray;
+	border-bottom: 1px solid var(--light);
 }
 
 .dropdown-btn {
-	background-color: white;
+	background-color: var(--text-white);
 	border-radius: 0;
-	border-bottom: 1px solid lightgray;
+	border-bottom: 1px solid var(light);
 	min-width: 200px;
 	transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -327,6 +608,26 @@ a.active {
 }
 
 .dropdown-btn:hover {
-	background-color: rgb(67, 93, 179);
-	color: white;
+	background-color: var(--primary-drk);
+	color: var(--text-white);
+}
+
+.loadingPlaceholder {
+	width: 100%;
+	height: 20px;
+	animation: loadingPlaceholder 2s linear infinite;
+}
+
+@keyframes loadingPlaceholder {
+	0% {
+		background-color: var(--gray);
+	}
+
+	50% {
+		background-color: var(--light);
+	}
+
+	100% {
+		background-color: var(--gray);
+	}
 }
