--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,10 +1,11 @@
 button {
 	border: none;
-	background-color: lightgray;
+	background-color: var(--light);
 	border-radius: 8px;
 	cursor: pointer;
 	padding: 8px;
 	min-width: 30px;
+	color: var(--text-dark);
 }
 
 .pagination {
@@ -15,7 +16,7 @@ button {
 }
 
 .paginationText {
-	color: gray;
+	color: var(--gray);
 	font-size: 0.925rem;
 }
 
@@ -33,6 +34,6 @@ button {
 }
 
 button.active {
-	background-color: dodgerblue;
-	color: white;
+	background-color: var(--primary);
+	color: var(--white);
 }
