--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 	--background-color: hsl(0, 0%, 100%);
 	--background-light: hsl(0, 0%, 85%);
 	--text-dark: hsl(0, 0%, 3%);
+	--text-light-dark: hsl(0, 0%, 20%);
 	--text-muted: hsl(0, 0%, 66%);
 	--text-white: hsl(0, 0%, 97%);
 	--black: hsl(0, 0%, 0%);
@@ -29,6 +30,7 @@
 	--background-color: hsl(240, 15%, 18%);
 	--background-light: hsl(240, 15%, 15%);
 	--text-dark: hsl(0, 0%, 100%);
+	--text-light-dark: hsl(0, 0%, 75%);
 	--text-muted: hsl(0, 0%, 52%);
 	--text-white: hsl(0, 0%, 3%);
 	--gray: hsl(0, 0%, 50%);
@@ -43,6 +45,10 @@
 	--success-lt: hsl(120, 50%, 20%);
 	--warning-lt: hsl(60, 50%, 20%);
 	--danger-lt: hsl(0, 50%, 20%);
+}
+
+* {
+	box-sizing: border-box;
 }
 
 html {
@@ -89,6 +95,21 @@ p {
 
 select {
 	font-size: 0.875rem;
+	cursor: pointer;
+}
+
+.select-clear,
+.input-clear {
+	background: none;
+	border: none;
+	outline: none;
+	color: inherit;
+}
+
+.option-clear {
+	border-width: 0;
+	background-color: var(--light);
+	color: var(--text-dark);
 }
 
 .cursor-auto {
@@ -97,6 +118,30 @@ select {
 
 .cursor-pointer {
 	cursor: pointer;
+}
+
+.fs-xs {
+	font-size: 0.625rem;
+}
+
+.fs-sm {
+	font-size: 0.875rem;
+}
+
+.fs-md {
+	font-size: 1rem;
+}
+
+.fs-lg {
+	font-size: 1.15rem;
+}
+
+.fs-xl {
+	font-size: 1.25rem;
+}
+
+.fs-xxl {
+	font-size: 1.5rem;
 }
 
 .wrapper {
@@ -131,6 +176,10 @@ select {
 
 li {
 	list-style: none;
+}
+
+.border-none {
+	border: none;
 }
 
 table {
@@ -230,6 +279,10 @@ a:hover {
 	color: var(--text-muted);
 }
 
+.text-light-dark {
+	color: var(--text-light-dark);
+}
+
 .text-start {
 	text-align: left;
 }
@@ -252,6 +305,7 @@ a:hover {
 
 .text-bold {
 	font-weight: bold;
+	letter-spacing: 0.75px;
 }
 
 .text-warning,
@@ -276,6 +330,10 @@ a:hover {
 	color: var(--text-white);
 }
 
+.text-dark {
+	color: var(--text-dark);
+}
+
 .badge {
 	padding: 0.25rem 0.5rem;
 	border-radius: 0.25rem;
@@ -287,6 +345,22 @@ a:hover {
 
 .flex-1 {
 	flex: 1;
+}
+
+.flex-2 {
+	flex: 2;
+}
+
+.col-12 {
+	width: 100%;
+}
+
+.col-8 {
+	width: calc(100% * 2 / 3);
+}
+
+.col-4 {
+	width: calc(100% / 3);
 }
 
 .flex-center {
@@ -360,6 +434,7 @@ a:hover {
 
 .btn-success:hover:not(:disabled) {
 	background-color: var(--success-drk);
+	color: var(--text-white);
 }
 
 .btn-warning {
@@ -369,6 +444,7 @@ a:hover {
 
 .btn-warning:hover:not(:disabled) {
 	background-color: var(--warning-drk);
+	color: var(--text-white);
 }
 
 .btn-light-primary {
@@ -384,6 +460,54 @@ a:hover {
 }
 
 .btn-light-success {
+	background-color: var(--success-lt);
+}
+
+.bg-none {
+	background: none;
+}
+
+.bg-white {
+	background-color: var(--white);
+}
+
+.bg-light {
+	background-color: var(--light);
+}
+
+.bg-primary {
+	background-color: var(--primary);
+}
+
+.bg-secondary {
+	background-color: var(--secondary);
+}
+
+.bg-danger {
+	background-color: var(--danger);
+}
+
+.bg-success {
+	background-color: var(--success);
+}
+
+.bg-warning {
+	background-color: var(--warning);
+}
+
+.bg-light-primary {
+	background-color: var(--primary-lt);
+}
+
+.bg-light-secondary {
+	background-color: var(--light);
+}
+
+.bg-light-danger {
+	background-color: var(--danger-lt);
+}
+
+.bg-light-success {
 	background-color: var(--success-lt);
 }
 
@@ -449,6 +573,56 @@ a:hover {
 
 .p-4 {
 	padding: 1rem;
+}
+
+.px-0 {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.px-1 {
+	padding-left: 0.25rem;
+	padding-right: 0.25rem;
+}
+
+.px-2 {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+}
+
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
+
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
+.py-0 {
+	padding-top: 0;
+	padding-bottom: 0;
+}
+
+.py-1 {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+}
+
+.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
+.py-3 {
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
+
+.py-4 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .m-0 {
