--- a/src/App.css
+++ b/src/App.css
@@ -52,19 +52,19 @@
 }
 
 html {
-	font-size: 16px;
+	font-size: 12px;
 }
 
 html[data-size='sm'] {
-	font-size: 14px;
+	font-size: 10px;
 }
 
 html[data-size='lg'] {
-	font-size: 18px;
+	font-size: 14px;
 }
 
 html[data-size='xl'] {
-	font-size: 20px;
+	font-size: 16px;
 }
 
 body {
@@ -101,6 +101,22 @@ h6 {
 	color: inherit;
 	font-size: inherit;
 	transition: color ease-in-out 0.15s, background-color ease-in-out 0.15s;
+}
+
+.logo {
+	width: 24px;
+}
+
+.order-1 {
+	order: 1;
+}
+
+.order-2 {
+	order: 2;
+}
+
+.order-3 {
+	order: 3;
 }
 
 select {
@@ -159,11 +175,11 @@ select {
 }
 
 .fs-xs {
-	font-size: 0.625rem;
+	font-size: 0.785rem;
 }
 
 .fs-sm {
-	font-size: 0.875rem;
+	font-size: 0.925rem;
 }
 
 .fs-md {
@@ -191,16 +207,16 @@ select {
 .menu {
 	position: fixed;
 	top: 0;
-	min-width: 72px;
+	gap: 1rem;
 	display: flex;
 	align-items: flex-start;
-	gap: 16px;
 	padding: 0.75rem;
 	background-color: var(--background-color);
 	border-bottom-right-radius: 1rem;
 	border: 1px solid var(--light);
 	border-top-width: 0;
 	border-left-width: 0;
+	font-size: 1.25rem;
 	box-shadow: 5px 5px 10px var(--background-color);
 }
 
@@ -216,7 +232,7 @@ select {
 }
 
 .content {
-	padding-left: 80px;
+	padding-top: 60px;
 }
 
 .w-auto {
@@ -227,6 +243,10 @@ select {
 	width: 10%;
 }
 
+.w-15 {
+	width: 15%;
+}
+
 .w-20 {
 	width: 20%;
 }
@@ -235,12 +255,28 @@ select {
 	width: 25%;
 }
 
+.w-30 {
+	width: 30%;
+}
+
+.w-40 {
+	width: 40%;
+}
+
 .w-50 {
 	width: 50%;
 }
 
 .w-100 {
 	width: 100%;
+}
+
+.w-80px {
+	width: 80px;
+}
+
+.w-100px {
+	width: 100px;
 }
 
 .h-100 {
@@ -253,6 +289,10 @@ select {
 
 .min-w-100px {
 	min-width: 100px;
+}
+
+.min-w-150px {
+	min-width: 150px;
 }
 
 .min-w-200px {
@@ -315,7 +355,7 @@ tbody tr:hover:not(.nohover) {
 }
 
 .table-col-1 {
-	width: 80px;
+	width: 70px;
 	white-space: nowrap;
 }
 
@@ -593,7 +633,7 @@ a:hover {
 	background-color: var(--light);
 }
 
-.btn-light-secondary:hover {
+.btn-light-secondary:hover:not(:disabled) {
 	background-color: var(--gray);
 }
 
@@ -603,6 +643,10 @@ a:hover {
 
 .btn-light-success {
 	background-color: var(--success-lt);
+}
+
+button:hover:disabled {
+	cursor: not-allowed;
 }
 
 .bg-none {
@@ -931,6 +975,34 @@ a:hover {
 	margin-bottom: 1rem;
 }
 
+.mb-5 {
+	margin-bottom: 1.5rem;
+}
+
+.mt-0 {
+	margin-bottom: 0;
+}
+
+.mt-1 {
+	margin-top: 0.25rem;
+}
+
+.mt-2 {
+	margin-top: 0.5rem;
+}
+
+.mt-3 {
+	margin-top: 0.75rem;
+}
+
+.mt-4 {
+	margin-top: 1rem;
+}
+
+.mt-5 {
+	margin-top: 1.5rem;
+}
+
 .gap-1 {
 	gap: 0.25rem;
 }
@@ -1206,12 +1278,36 @@ a:hover {
 }
 
 @media (min-width: 576px) {
+	html {
+		font-size: 14px;
+	}
+
+	html[data-size='sm'] {
+		font-size: 12px;
+	}
+
+	html[data-size='lg'] {
+		font-size: 16px;
+	}
+
+	html[data-size='xl'] {
+		font-size: 18px;
+	}
+
+	.w-sm-auto {
+		width: auto;
+	}
+
 	.d-sm-block {
 		display: block;
 	}
 
 	.d-sm-flex {
 		display: flex;
+	}
+
+	.d-sm-table-cell {
+		display: table-cell;
 	}
 
 	.menu {
@@ -1221,6 +1317,7 @@ a:hover {
 		margin-top: 16px;
 		padding: 16px 32px;
 		overflow-x: auto;
+		font-size: 1rem;
 		border: none;
 	}
 
@@ -1230,12 +1327,11 @@ a:hover {
 		justify-content: flex-start;
 		align-items: center;
 		gap: 32px;
-		font-size: 1.2rem;
 		letter-spacing: 1.5px;
 	}
 
 	.content {
-		padding-left: 0;
+		padding-top: 0;
 	}
 
 	.mobile-btn {
@@ -1243,13 +1339,112 @@ a:hover {
 	}
 }
 
+@media (min-width: 768px) {
+	html {
+		font-size: 15px;
+	}
+
+	html[data-size='sm'] {
+		font-size: 13px;
+	}
+
+	html[data-size='lg'] {
+		font-size: 17px;
+	}
+
+	html[data-size='xl'] {
+		font-size: 19px;
+	}
+
+	.w-md-auto {
+		width: auto;
+	}
+
+	.flex-md-row {
+		flex-direction: row;
+	}
+
+	.align-md-start {
+		align-items: flex-start;
+	}
+
+	.order-md-1 {
+		order: 1;
+	}
+
+	.order-md-2 {
+		order: 2;
+	}
+
+	.order-md-3 {
+		order: 3;
+	}
+
+	.logo {
+		width: 28px;
+	}
+
+	.table-col-md-0 {
+		width: 50px;
+		white-space: nowrap;
+	}
+
+	.table-col-md-1 {
+		width: 60px;
+		white-space: nowrap;
+	}
+
+	.table-col-md-2 {
+		width: 100px;
+		white-space: nowrap;
+	}
+
+	.table-col-md-3 {
+		width: 125px;
+		white-space: nowrap;
+	}
+
+	.table-col-md-4 {
+		width: 205px;
+		white-space: nowrap;
+	}
+}
+
 @media (min-width: 992px) {
+	html {
+		font-size: 16px;
+	}
+
+	html[data-size='sm'] {
+		font-size: 14px;
+	}
+
+	html[data-size='lg'] {
+		font-size: 18px;
+	}
+
+	html[data-size='xl'] {
+		font-size: 20px;
+	}
+
+	.w-lg-auto {
+		width: auto;
+	}
+
+	.logo {
+		width: 32px;
+	}
+
 	.d-lg-block {
 		display: block;
 	}
 
 	.d-lg-flex {
 		display: flex;
+	}
+
+	.d-lg-table-cell {
+		display: table-cell;
 	}
 
 	.flex-lg-1 {
@@ -1260,9 +1455,58 @@ a:hover {
 		margin-left: 0;
 		margin-right: 0;
 	}
+
+	.table-col-lg-0 {
+		width: 50px;
+		white-space: nowrap;
+	}
+
+	.table-col-lg-1 {
+		width: 60px;
+		white-space: nowrap;
+	}
+
+	.table-col-lg-2 {
+		width: 100px;
+		white-space: nowrap;
+	}
+
+	.table-col-lg-3 {
+		width: 125px;
+		white-space: nowrap;
+	}
+
+	.table-col-lg-4 {
+		width: 205px;
+		white-space: nowrap;
+	}
 }
 
 @media (min-width: 1200px) {
+	html {
+		font-size: 16px;
+	}
+
+	html[data-size='sm'] {
+		font-size: 15px;
+	}
+
+	html[data-size='lg'] {
+		font-size: 19px;
+	}
+
+	html[data-size='xl'] {
+		font-size: 21px;
+	}
+
+	.w-xl-auto {
+		width: auto;
+	}
+
+	.logo {
+		width: 36px;
+	}
+
 	.menu {
 		justify-content: center;
 	}
