Optimistic ethereum network api integration

--- a/src/App.css
+++ b/src/App.css
@@ -390,6 +390,18 @@ tbody tr:hover:not(.nohover) {
 	letter-spacing: 1.5px;
 }
 
+.l-spacing-nsm {
+	letter-spacing: -0.25px;
+}
+
+.l-spacing-nmd {
+	letter-spacing: -0.5px;
+}
+
+.l-spacing-nlg {
+	letter-spacing: -0.75px;
+}
+
 a {
 	text-decoration: none;
 	font-weight: 600;
