--- a/src/screens/Portfolio/Portfolio.module.css
+++ b/src/screens/Portfolio/Portfolio.module.css
@@ -5,8 +5,13 @@
 }
 
 .tab {
+	background-color: var(--light);
 	padding: 8px 16px;
 	font-size: 0.9rem;
+}
+
+g[data-theme='dark'] .tab {
+	
 }
 
 .tab.active {
